--- a/config/locales/blacklight.en.yml
+++ b/config/locales/blacklight.en.yml
@@ -223,4 +223,4 @@ en:
     entry_name:
       default: 'entry'
 
-    did_you_mean: 'Similar searches: %{options}?'
+    did_you_mean: 'Or search instead for %{options}.'
