--- a/config/locales/devise.en.yml
+++ b/config/locales/devise.en.yml
@@ -23,7 +23,7 @@ en:
       inactive: 'Your account was not activated yet.'
     sessions:
       signed_in: 'Signed in successfully.'
-      signed_out: 'You have been logged out of Digital Collections. To logout of all Single Sign-On applications, close your browser.'
+      signed_out: "You have logged out."
     passwords:
       send_instructions: 'You will receive an email with instructions about how to reset your password in a few minutes.'
       updated: 'Your password was changed successfully. You are now signed in.'
