Updating search results pager display (DHH-319)

--- a/config/locales/blacklight.en.yml
+++ b/config/locales/blacklight.en.yml
@@ -169,7 +169,7 @@ en:
         title: 'Number of results to display per page'
         submit: 'Update'
       sort:
-        label: 'Sort by %{field}'
+        label: 'Sort: %{field}'
         submit: 'sort results'
       form:
         search_field:
