--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -21,3 +21,4 @@
 
 en:
   hello: "Hello world"
+  sensitive_message: "Culturally sensitive content: This is an image of a person or persons now deceased. In some Aboriginal Communities, hearing names or seeing images of deceased persons may cause sadness or distress, particularly to the relatives of these people.  Would you like to view its content?"
